@@ -1,3 +1,4 @@
+* Add format method to DictSchemaMixin
 * Allow modify record name on the reports
 * Add methods to format number and symbol on Lang
 * Add format number with symbol on Report
